<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="GUI">Look at my GUI</string>
    <string name="Check">Check this out!</string>
    <string name="Switch">Switch on / off</string>
    <string name="Click">CLICK HERE</string>
    <string name="TypePrompt">Type here</string>
    <string name="Error">There was an error loading the image</string>

    <string name="mailPromptText">Enter your email address:</string>
    <string name="mailFillText">Type email here</string>
    <string name="passPromptText">Type your passowrd</string>
    <string name="loginText">Login</string>

    <string name="profileText">Your Profile</string>
    <string name="namePromptText">Your name:</string>
    <string name="nameFillText">Enter your name</string>
    <string name="mail2PromptText">Your email:</string>
    <string name="mail2FillText">Enter your email</string>
    <string name="picPromptText">Your picture:</string>
    <string name="picHintText">Click the button above to take a picture</string>

    <string name="chatBtnText">Start Chatting!</string>
    <string name="sendBtnText">Send</string>
    <string name="receiveBtnText">Receive</string>
</resources>
