<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_height="match_parent"
>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:text="@string/GUI"
    />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/Click"

    />

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/Check"
    />

    <ImageButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_columnWeight="1"
        android:src="@drawable/flag"
    />

    <Switch
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/Switch"
    />

    <EditText
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:text="@string/TypePrompt"
    />


</GridLayout>