<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text1_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileText"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/text2_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1_2"
        android:text="@string/namePromptText"
        />

    <EditText
        android:id="@+id/nameFill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameFillText"
        android:layout_below="@id/text2_2"
        />


    <TextView
        android:id="@+id/text3_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameFill"
        android:text="@string/mail2PromptText"

        />

    <EditText
        android:id="@+id/mailFTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail2FillText"
        android:layout_below="@id/text3_2"
        />

    <TextView
        android:id="@+id/text4_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mailFTwo"
        android:text="@string/picPromptText"
        />

    <ImageButton
        android:id="@+id/imgBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        android:layout_below="@id/text4_2"
        />

    <TextView
        android:id="@+id/text5_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgBtn"
        android:text="@string/picHintText"
        />
    <Button
        android:id="@+id/chatBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text5_2"
        android:text="@string/chatBtnText"
        />

    <Button
        android:id="@+id/weatherBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chatBtn"
        android:text="Get the Weather"
        />

    <Button
        android:id="@+id/toolbarBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weatherBtn"
        android:text="Go to toolbar page"
        />


</RelativeLayout>