<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/GUI"
        android:textSize="30dp"
    />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text"
        android:text="@string/Click"
        android:layout_alignEnd="@id/img"
    />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text"
        android:layout_toEndOf="@+id/button"
        android:text="@string/Check"
    />

    <ImageButton
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_below="@+id/button"
        android:contentDescription="@string/Error"
    />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/img"
        android:layout_alignTop="@+id/img"
        android:text="@string/Switch"
        android:layout_alignParentRight="true"
    />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/TypePrompt"
    />

</RelativeLayout>