<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/msgList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sendBtn"
        />
    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/sendBtnText"
        />
    <EditText
        android:id="@+id/msgContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/TypePrompt"
        android:layout_toEndOf="@id/sendBtn"
        android:layout_toStartOf="@id/getBtn"
        android:layout_alignParentBottom="true"

        />
    <Button
        android:id="@+id/getBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/receiveBtnText"
        />


</RelativeLayout>